--- a/css/materialize.css
+++ b/css/materialize.css
@@ -3127,8 +3127,8 @@ td, th {
 }
 
 .collection .collection-item.active {
-  background-color: #00001e;
-  color: #3838ff;
+  background-color: #ceb800;
+  color: #fffce8;
 }
 
 .collection .collection-item.active .secondary-content {
@@ -3139,7 +3139,7 @@ td, th {
   display: block;
   -webkit-transition: .25s;
   transition: .25s;
-  color: #00001e;
+  color: #ceb800;
 }
 
 .collection a.collection-item:not(.active):hover {
@@ -3162,7 +3162,7 @@ td, th {
 
 .secondary-content {
   float: right;
-  color: #00001e;
+  color: #ceb800;
 }
 
 .collapsible .collection {
@@ -3190,7 +3190,7 @@ td, th {
   height: 4px;
   display: block;
   width: 100%;
-  background-color: #0000ea;
+  background-color: #fff49b;
   border-radius: 2px;
   margin: 0.5rem 0 1rem 0;
   overflow: hidden;
@@ -3201,13 +3201,13 @@ td, th {
   top: 0;
   left: 0;
   bottom: 0;
-  background-color: #00001e;
+  background-color: #ceb800;
   -webkit-transition: width .3s linear;
   transition: width .3s linear;
 }
 
 .progress .indeterminate {
-  background-color: #00001e;
+  background-color: #ceb800;
 }
 
 .progress .indeterminate:before {
@@ -3370,7 +3370,7 @@ span.badge.new {
   font-weight: 300;
   font-size: 0.8rem;
   color: #fff;
-  background-color: #00001e;
+  background-color: #ceb800;
   border-radius: 2px;
 }
 
@@ -5222,13 +5222,13 @@ small {
 
 .btn:focus, .btn-large:focus, .btn-small:focus,
 .btn-floating:focus {
-  background-color: black;
+  background-color: #9b8a00;
 }
 
 .btn, .btn-large, .btn-small {
   text-decoration: none;
   color: #fff;
-  background-color: #00001e;
+  background-color: #ceb800;
   text-align: center;
   letter-spacing: .5px;
   -webkit-transition: background-color .2s ease-out;
@@ -5237,7 +5237,7 @@ small {
 }
 
 .btn:hover, .btn-large:hover, .btn-small:hover {
-  background-color: #000038;
+  background-color: #e8cf00;
 }
 
 .btn-floating {
@@ -5250,7 +5250,7 @@ small {
   height: 40px;
   line-height: 40px;
   padding: 0;
-  background-color: #00001e;
+  background-color: #ceb800;
   border-radius: 50%;
   -webkit-transition: background-color .3s;
   transition: background-color .3s;
@@ -5259,7 +5259,7 @@ small {
 }
 
 .btn-floating:hover {
-  background-color: #00001e;
+  background-color: #ceb800;
 }
 
 .btn-floating:before {
@@ -5458,7 +5458,7 @@ button.btn-floating {
   z-index: -1;
   width: 40px;
   height: 40px;
-  background-color: #00001e;
+  background-color: #ceb800;
   border-radius: 50%;
   -webkit-transform: scale(0);
           transform: scale(0);
@@ -5558,7 +5558,7 @@ button.btn-floating {
 
 .dropdown-content li > a, .dropdown-content li > span {
   font-size: 16px;
-  color: #00001e;
+  color: #ceb800;
   display: block;
   line-height: 22px;
   padding: 14px 16px;
@@ -6065,12 +6065,12 @@ body.keyboard-focused .dropdown-content li:focus {
 }
 
 select:focus {
-  outline: 1px solid #0f0fff;
+  outline: 1px solid #fff8bf;
 }
 
 button:focus {
   outline: none;
-  background-color: #000032;
+  background-color: #e2ca00;
 }
 
 label {
@@ -6199,9 +6199,9 @@ input[type=tel]:not(.browser-default):focus:not([readonly]),
 input[type=number]:not(.browser-default):focus:not([readonly]),
 input[type=search]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #00001e;
-  -webkit-box-shadow: 0 1px 0 0 #00001e;
-          box-shadow: 0 1px 0 0 #00001e;
+  border-bottom: 1px solid #ceb800;
+  -webkit-box-shadow: 0 1px 0 0 #ceb800;
+          box-shadow: 0 1px 0 0 #ceb800;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -6217,7 +6217,7 @@ input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
 input[type=number]:not(.browser-default):focus:not([readonly]) + label,
 input[type=search]:not(.browser-default):focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #00001e;
+  color: #ceb800;
 }
 
 input:not([type]):focus.valid ~ label,
@@ -6559,7 +6559,7 @@ textarea.materialize-textarea + label:after, .select-wrapper + label:after {
 }
 
 .input-field .prefix.active {
-  color: #00001e;
+  color: #ceb800;
 }
 
 .input-field .prefix ~ input,
@@ -6756,12 +6756,12 @@ textarea.materialize-textarea {
 [type="radio"]:checked + span:after,
 [type="radio"].with-gap:checked + span:before,
 [type="radio"].with-gap:checked + span:after {
-  border: 2px solid #00001e;
+  border: 2px solid #ceb800;
 }
 
 [type="radio"]:checked + span:after,
 [type="radio"].with-gap:checked + span:after {
-  background-color: #00001e;
+  background-color: #ceb800;
 }
 
 [type="radio"]:checked + span:after {
@@ -6883,8 +6883,8 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-right: 2px solid #00001e;
-  border-bottom: 2px solid #00001e;
+  border-right: 2px solid #ceb800;
+  border-bottom: 2px solid #ceb800;
   -webkit-transform: rotate(40deg);
           transform: rotate(40deg);
   -webkit-backface-visibility: hidden;
@@ -6906,7 +6906,7 @@ textarea.materialize-textarea {
   height: 22px;
   border-top: none;
   border-left: none;
-  border-right: 2px solid #00001e;
+  border-right: 2px solid #ceb800;
   border-bottom: none;
   -webkit-transform: rotate(90deg);
           transform: rotate(90deg);
@@ -6976,8 +6976,8 @@ textarea.materialize-textarea {
   top: 0;
   width: 20px;
   height: 20px;
-  border: 2px solid #00001e;
-  background-color: #00001e;
+  border: 2px solid #ceb800;
+  background-color: #ceb800;
   z-index: 0;
 }
 
@@ -6989,8 +6989,8 @@ textarea.materialize-textarea {
 
 [type="checkbox"].filled-in.tabbed:checked:focus + span:not(.lever):after {
   border-radius: 2px;
-  background-color: #00001e;
-  border-color: #00001e;
+  background-color: #ceb800;
+  border-color: #ceb800;
 }
 
 [type="checkbox"].filled-in:disabled:not(:checked) + span:not(.lever):before {
@@ -7034,7 +7034,7 @@ textarea.materialize-textarea {
 }
 
 .switch label input[type=checkbox]:checked + .lever {
-  background-color: #14148a;
+  background-color: #e9db65;
 }
 
 .switch label input[type=checkbox]:checked + .lever:before, .switch label input[type=checkbox]:checked + .lever:after {
@@ -7042,7 +7042,7 @@ textarea.materialize-textarea {
 }
 
 .switch label input[type=checkbox]:checked + .lever:after {
-  background-color: #00001e;
+  background-color: #ceb800;
 }
 
 .switch label .lever {
@@ -7076,7 +7076,7 @@ textarea.materialize-textarea {
 }
 
 .switch label .lever:before {
-  background-color: rgba(0, 0, 30, 0.15);
+  background-color: rgba(206, 184, 0, 0.15);
 }
 
 .switch label .lever:after {
@@ -7089,7 +7089,7 @@ input[type=checkbox]:checked:not(:disabled) ~ .lever:active::before,
 input[type=checkbox]:checked:not(:disabled).tabbed:focus ~ .lever::before {
   -webkit-transform: scale(2.4);
           transform: scale(2.4);
-  background-color: rgba(0, 0, 30, 0.15);
+  background-color: rgba(206, 184, 0, 0.15);
 }
 
 input[type=checkbox]:not(:disabled) ~ .lever:active:before,
@@ -7164,7 +7164,7 @@ select {
 }
 
 .select-wrapper input.select-dropdown:focus {
-  border-bottom: 1px solid #00001e;
+  border-bottom: 1px solid #ceb800;
 }
 
 .select-wrapper .caret {
@@ -7337,7 +7337,7 @@ input[type=range] + .thumb {
   height: 0;
   width: 0;
   border-radius: 50%;
-  background-color: #00001e;
+  background-color: #ceb800;
   margin-left: 7px;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
@@ -7349,7 +7349,7 @@ input[type=range] + .thumb .value {
   display: block;
   width: 30px;
   text-align: center;
-  color: #00001e;
+  color: #ceb800;
   font-size: 0;
   -webkit-transform: rotate(45deg);
           transform: rotate(45deg);
@@ -7381,21 +7381,21 @@ input[type=range]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #00001e;
+  background: #ceb800;
   -webkit-transition: -webkit-box-shadow .3s;
   transition: -webkit-box-shadow .3s;
   transition: box-shadow .3s;
   transition: box-shadow .3s, -webkit-box-shadow .3s;
   -webkit-appearance: none;
-  background-color: #00001e;
+  background-color: #ceb800;
   -webkit-transform-origin: 50% 50%;
           transform-origin: 50% 50%;
   margin: -5px 0 0 0;
 }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-webkit-slider-thumb {
-  -webkit-box-shadow: 0 0 0 10px rgba(0, 0, 30, 0.26);
-          box-shadow: 0 0 0 10px rgba(0, 0, 30, 0.26);
+  -webkit-box-shadow: 0 0 0 10px rgba(206, 184, 0, 0.26);
+          box-shadow: 0 0 0 10px rgba(206, 184, 0, 0.26);
 }
 
 input[type=range] {
@@ -7419,7 +7419,7 @@ input[type=range]::-moz-range-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #00001e;
+  background: #ceb800;
   -webkit-transition: -webkit-box-shadow .3s;
   transition: -webkit-box-shadow .3s;
   transition: box-shadow .3s;
@@ -7433,7 +7433,7 @@ input[type=range]:-moz-focusring {
 }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-moz-range-thumb {
-  box-shadow: 0 0 0 10px rgba(0, 0, 30, 0.26);
+  box-shadow: 0 0 0 10px rgba(206, 184, 0, 0.26);
 }
 
 input[type=range]::-ms-track {
@@ -7458,7 +7458,7 @@ input[type=range]::-ms-thumb {
   height: 14px;
   width: 14px;
   border-radius: 50%;
-  background: #00001e;
+  background: #ceb800;
   -webkit-transition: -webkit-box-shadow .3s;
   transition: -webkit-box-shadow .3s;
   transition: box-shadow .3s;
@@ -7466,7 +7466,7 @@ input[type=range]::-ms-thumb {
 }
 
 .keyboard-focused input[type=range]:focus:not(.active)::-ms-thumb {
-  box-shadow: 0 0 0 10px rgba(0, 0, 30, 0.26);
+  box-shadow: 0 0 0 10px rgba(206, 184, 0, 0.26);
 }
 
 /***************
@@ -7574,11 +7574,11 @@ input[type=range]::-ms-thumb {
 }
 
 .sidenav li > a.btn:hover, .sidenav li > a.btn-large:hover, .sidenav li > a.btn-small:hover, .sidenav li > a.btn-large:hover {
-  background-color: #000038;
+  background-color: #e8cf00;
 }
 
 .sidenav li > a.btn-floating:hover {
-  background-color: #00001e;
+  background-color: #ceb800;
 }
 
 .sidenav li > a > i,
@@ -7792,7 +7792,7 @@ input[type=range]::-ms-thumb {
   width: 100%;
   height: 100%;
   opacity: 0;
-  border-color: #00001e;
+  border-color: #ceb800;
 }
 
 .spinner-blue,
@@ -8668,7 +8668,7 @@ input[type=range]::-ms-thumb {
   -webkit-box-flex: 1;
       -ms-flex: 1 auto;
           flex: 1 auto;
-  background-color: #00001e;
+  background-color: #ceb800;
   color: #fff;
   padding: 20px 22px;
   font-weight: 500;
@@ -8725,11 +8725,11 @@ input[type=range]::-ms-thumb {
 }
 
 .datepicker-table td.is-today {
-  color: #00001e;
+  color: #ceb800;
 }
 
 .datepicker-table td.is-selected {
-  background-color: #00001e;
+  background-color: #ceb800;
   color: #fff;
 }
 
@@ -8751,7 +8751,7 @@ input[type=range]::-ms-thumb {
 }
 
 .datepicker-day-button:focus {
-  background-color: rgba(1, 1, 29, 0.25);
+  background-color: rgba(201, 180, 5, 0.25);
 }
 
 /* Footer */
@@ -8771,7 +8771,7 @@ input[type=range]::-ms-thumb {
 .datepicker-clear,
 .datepicker-today,
 .datepicker-done {
-  color: #00001e;
+  color: #ceb800;
   padding: 0 1rem;
 }
 
@@ -8831,7 +8831,7 @@ input[type=range]::-ms-thumb {
   -webkit-box-flex: 1;
       -ms-flex: 1 auto;
           flex: 1 auto;
-  background-color: #00001e;
+  background-color: #ceb800;
   padding: 10px;
   font-weight: 300;
 }
@@ -8921,7 +8921,7 @@ input[type=range]::-ms-thumb {
 
 .timepicker-tick.active,
 .timepicker-tick:hover {
-  background-color: rgba(0, 0, 30, 0.25);
+  background-color: rgba(206, 184, 0, 0.25);
 }
 
 .timepicker-dial {
@@ -8951,7 +8951,7 @@ input[type=range]::-ms-thumb {
 }
 
 .timepicker-canvas line {
-  stroke: #00001e;
+  stroke: #ceb800;
   stroke-width: 4;
   stroke-linecap: round;
 }
@@ -8962,12 +8962,12 @@ input[type=range]::-ms-thumb {
 
 .timepicker-canvas-bearing {
   stroke: none;
-  fill: #00001e;
+  fill: #ceb800;
 }
 
 .timepicker-canvas-bg {
   stroke: none;
-  fill: #00001e;
+  fill: #ceb800;
 }
 
 /* Footer */
@@ -8987,7 +8987,7 @@ input[type=range]::-ms-thumb {
 }
 
 .timepicker-close {
-  color: #00001e;
+  color: #ceb800;
 }
 
 .timepicker-clear,
@@ -9114,7 +9114,7 @@ blockquote {
 }
 
 .input-field {
-  background-color: #00001e;
+  background-color: #ceb800;
 }
 
 #articles_main_grid {
@@ -9195,7 +9195,7 @@ blockquote {
 }
 
 .review_card_title a {
-  color: #00001e;
+  color: #ceb800;
 }
 
 .review_date {
