--- a/materialize-src/sass/components/_podcasts.scss
+++ b/materialize-src/sass/components/_podcasts.scss
@@ -3,13 +3,14 @@
   padding: 3rem 3rem;
   background-image: url(../../../img/player_bg.jpg);
   background-size: cover;
+  background-position: bottom;
 }
 #podcast_h1 {
   color: white;
 }
 #content_wrapper {
   display: grid;
-  grid-template-columns: 3fr 1fr;
+  grid-template-columns: 2fr 1fr;
   grid-gap: 3rem;
 }
 .podcast_cards {
@@ -31,24 +32,69 @@
   font-size: 2rem;
 }
 
-#right_player {
-  // padding: 3rem;
-  height: 300px;
+#right_side_player_wrapper {
+  // make it stick at the bottom of the page
+  position: sticky;
+  bottom: 8rem;
+  align-self: end;
+
+  height: 600px;
+  padding: 0 0;
+  background: inherit;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 3fr 1fr 6fr;
+
+  // prepare for the blur effect
+  background-color: rgba(255, 255, 255, 0.95);
+  color: #333;
 }
 
-.bg_text {
-  color: red;
-  font-weight: bold;
-  transform: translate(-50%, -50%);
-  z-index: 999;
-  width: 80%;
-  padding: 20px;
-  text-align: center;
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  #right_side_player_wrapper {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.3);
+  }
 }
 
-#bg_img {
-  height: 100%;
-  // background-image: url(../../../img/player_bg.jpg);
-  // background-size: cover;
-  // filter: blur(4px);
+#avatar {
+  grid-row: 1/3;
+  background-color: $primary-color;
+}
+
+.wrapper_grid_child {
+  // border: 1px solid blueviolet;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+#control_panel_top {
+  grid-row: 1/2;
+  grid-column: 2/-1;
+  padding: 3rem;
+  background: inherit;
+}
+
+#player_title {
+  color: white;
+  font-weight: 700;
+}
+
+#control_panel_bottom {
+  padding: 1rem 1rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background: inherit;
+}
+
+.player_control_btns {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+#playlist {
+  grid-column: 1/-1;
 }
