--- a/materialize-src/sass/components/_variables.scss
+++ b/materialize-src/sass/components/_variables.scss
@@ -32,16 +32,12 @@
 // 1. Colors
 // ==========================================================================
 
-// $primary-color: #022444 !default;
 $primary-color: #00001e !default;
 
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
-// $secondary-color: #0c8d99 !default;
-// $secondary-color: #022444 !default;
-// $secondary-color: #03a9f4 !default;
-$secondary-color: #00001e !default;
+$secondary-color: #ceb800 !default;
 $success-color: color("green", "base") !default;
 $error-color: color("red", "base") !default;
 $link-color: color("light-blue", "darken-1") !default;
